refactor(backend - taskflowservice: Chuyển toàn bộ manual mapping -> Map Struct